--- a/com.lux005.hadoop.WebBot/.project
+++ b/com.lux005.hadoop.WebBot/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.lux005.hadoop.WebBot</name>
+	<name>com.lux005.hadoop.WebCrawler</name>
 	<comment></comment>
 	<projects>
 	</projects>
